tests/fixtures/invalid/e003/a.spec
use b

invariant cycle_a "Cycle A" {
  guarantee """something"""
}
